product link correct

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <!-- menu section ends -->
 
     <!-- product section starts -->
-    <search class="products" id="products">
+    <search class="products" id="product">
         <h1 class="heading">our <span>product</span></h1>
 
         <div class="box-container">
